some fixes of UI, deleted userlist component, added animations on buttons, renamed project

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="header-container-block">
     <h2>About Me</h2>
 
-    <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&h=350">
+    <img src="../../assets/photo.jpg">
 
     <div class="column2">
       <p>
