--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -13,6 +13,14 @@ a, span{
   font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
+.admin-container {
+  max-width: 2000px;
+  max-height: 1000px;
+  background: url("/assets/admin_bg.jpg") center no-repeat;
+  height: 100%;
+  margin: auto;
+}
+
 /********************************************************
                       Header
 *********************************************************/
@@ -151,6 +159,10 @@ img{
   padding-top: 10px;
   padding-bottom: 10px;
   cursor: pointer;
+
+  &:hover span {
+    color: cornflowerblue;
+  }
 }
 .showed span{
   display: inline-flex;
@@ -174,7 +186,7 @@ img{
 
 .content-block {
   color: initial;
-  padding: 0 0 0 230px;
+  height: calc(100% - 50px);
 }
 
 .dropdown-content {
@@ -182,10 +194,19 @@ img{
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 3px 4px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 3px 4px 5px rgba(0,0,0,0.3);
   border-radius: 3px;
   z-index: 1;
   right: 0;
+
+  a {
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    color: #090043;
+  }
 }
 .menu-header-btn:hover .menu-header-btn{
   background-color: #3e8e41;
@@ -208,4 +229,17 @@ img{
 .showed-header-btns:hover .dropdown-content {
 
   display: block;
+}
+
+
+/***/
+
+.list--item_link {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.category-list_item:hover .list--item_link {
+  color: #008DF2;
 }
