--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,14 +1,17 @@
 .dash-container {
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 50px);
 }
 
 .table-box {
   border: 3px solid lightgrey;
-  display: inline-block;
   border-radius: 7px;
   font-size: 90%;
   background: white;
-  width: 800px;
+  max-width: 800px;
+  display: grid;
 }
 
 table {
@@ -62,11 +65,7 @@ tr td {
   width: 165px;
 }
 
-.name-collumn {
-  min-width: 115px;
-}
-
-.email-column {
+.name-column, .email-column {
   min-width: 115px;
 }
 
@@ -84,7 +83,7 @@ tr td button {
   font-size: 17px;
 }
 
-#createU, #delU, #mU {
+.btn--createUser, .btn--deleteUser, #mU {
   margin: 0 0 10px 10px;
   border: none;
   border-radius: 4px;
@@ -93,11 +92,18 @@ tr td button {
   padding: 0 4px 0 4px;
 }
 
-#createU {
+.btn {
+  transition: 0.3s;
+}
+.btn:hover {
+  color: #1a2226;
+}
+
+.btn--createUser {
   background: cornflowerblue;
 }
 
-#delU, .deleteCl {
+.btn--deleteUser, .deleteCl {
   background: red;
 }
 
@@ -157,5 +163,13 @@ th i.fas {
 /*th:active i {*/
 /*display: inline;*/
 /*}*/
+/**/
+.editCl {
+  color: white;
+  transition: 0.3s;
+}
+.editCl:hover {
+  color: black;
+}
 
 /*# sourceMappingURL=dashboard.component.css.map */
