--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -5,9 +5,17 @@
       class="login-form">
       <h1>Admin page</h1>
       <h2>Sign in</h2>
-      <input type="email" class="lInput" [(ngModel)]="user.email"  placeholder="Email" name="email">
-      <input type="password" class="lInput" [(ngModel)]="user.password" placeholder="Password" name="password">
-      <button class="submit" (click)="auth(user)">Sign In</button>
+      <div class="input">
+        <label class="input--label">
+          <span>Email:</span>
+          <input type="email" class="lInput" [(ngModel)]="user.email"  placeholder="Email" name="email">
+        </label>
+        <label class="input--label">
+          <span>Password:</span>
+          <input type="password" class="lInput" [(ngModel)]="user.password" placeholder="Password" name="password">
+        </label>
+        <button class="btn--sign_in" type="submit" (click)="auth(user)">Sign In</button>
+      </div>
     </form>
   </div>
 </div>
