--- a/src/app/public-page/public-page.component.html
+++ b/src/app/public-page/public-page.component.html
@@ -9,14 +9,12 @@
       <div class="nav-dropdown menu-header-btn">
         <button class=" dropbtn"><i class="fas fa-bars"></i></button>
         <div class="dropdown-content">
-          <a routerLink="#">Link 1</a>
-          <a routerLink="#">Link 2</a>
-          <a routerLink="#">Link 3</a>
+          <a routerLink="/login"><i class="fa fa-cog"></i> Settings</a>
         </div>
       </div>
     </nav>
   </header>
-  <div class="settings-btn"><a routerLink="/login"><i class="fa fa-cog"></i></a></div>
+<!--  <div class="settings-btn"><a routerLink="/login"><i class="fa fa-cog"></i></a></div>-->
   <div class="content-container">
     <router-outlet></router-outlet>
   </div>
