--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,75 +1,76 @@
-                <!--Header Block-->
-<header>
-              <!--Admin logo-->
-  <div class="logo-header">
-    <a href="" (click)="quit()">Admin LTE</a>
-  </div>
-                <!--End of Admin logo div-->
+<div class="admin-container">
+  <!--Header Block-->
+  <header>
+    <!--Admin logo-->
+    <div class="logo-header">
+      <a routerLink="#" (click)="quit()">Admin LTE</a>
+    </div>
+    <!--End of Admin logo div-->
 
-                <!--Header buttons)-->
-  <div class="head-btns-container">
-    <div class="head-btns">
-      <a href="#" class="showed-header-btns"><span><i class="fas fa-envelope"></i></span></a>
-      <a href="#" class="showed-header-btns"><span><i class="fas fa-bell"></i></span></a>
-      <a href="#" class="showed-header-btns"><span><i class="fas fa-flag"></i></span></a>
-      <a href="#" id="img-btn">
-        <img src="http://cactusthemes.com/blog/wp-content/uploads/2018/01/tt_avatar_small.jpg" class="avatar-header-img">
-        <span>User Name</span>
-      </a>
-      <div class="showed-header-btns">
-        <button class="dropbtn"><i class="fas fa-cogs"></i></button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a (click)=" quit()">Log Out</a>
+    <!--Header buttons)-->
+    <div class="head-btns-container">
+      <div class="head-btns">
+        <a routerLink="#" class="showed-header-btns"><span><i class="fas fa-envelope"></i></span></a>
+        <a routerLink="#" class="showed-header-btns"><span><i class="fas fa-bell"></i></span></a>
+        <a routerLink="#" class="showed-header-btns"><span><i class="fas fa-flag"></i></span></a>
+        <a routerLink="#" id="img-btn">
+          <img src="http://cactusthemes.com/blog/wp-content/uploads/2018/01/tt_avatar_small.jpg" class="avatar-header-img">
+          <span>User Name</span>
+        </a>
+        <div class="showed-header-btns">
+          <button class="dropbtn"><i class="fas fa-cogs"></i></button>
+          <div class="dropdown-content">
+            <a (click)=" quit()">Log Out</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-                <!--Header buttons)-->
-</header>
-                <!--End of Header-->
+    <!--Header buttons)-->
+  </header>
+  <!--End of Header-->
 
-                <!--Aside with navigation Sidebar-->
-<aside class="sidebar">
+  <!--Aside with navigation Sidebar-->
+  <aside class="sidebar">
 
-  <div class="user-panel">
-    <img src="http://cactusthemes.com/blog/wp-content/uploads/2018/01/tt_avatar_small.jpg" class="avatar-img">
+    <div class="user-panel">
+      <img src="http://cactusthemes.com/blog/wp-content/uploads/2018/01/tt_avatar_small.jpg" class="avatar-img">
       <span>
         <i>Jack Sparrow</i>
-        <a href="#">
+        <a routerLink="#">
           <i class="fa fa-circle text-success"></i>
           <a class="text-a">Online</a>
         </a>
       </span>
-  </div>
-              <!--Search form(Not working yet)-->
-  <form>
-    <div class="search-block">
-      <div class="search-input">
-        <input type="text" placeholder="Search">
-        <span><button type="submit" class="btn btn-flat"><span><i class="fa fa-search"></i></span></button></span>
-      </div>
     </div>
-  </form>
-              <!--End of Search form-->
+    <!--Search form(Not working yet)-->
+    <form>
+      <div class="search-block">
+        <div class="search-input">
+          <input type="text" placeholder="Search">
+          <span><button type="submit" class="btn btn-flat"><span><i class="fa fa-search"></i></span></button></span>
+        </div>
+      </div>
+    </form>
+    <!--End of Search form-->
 
-              <!--Navigation List-->
-  <ul class="sidebar-nav-ul">
-    <li class="head-li">Main Navigation</li>
-    <li class="sidebar--category" *ngFor="let menuItem of menuItems">
-      <span class="showed" (click)="menuClicked(menuItem)"><span><i class="{{menuItem.icon}}"></i>{{menuItem.title}}</span></span>
-      <ul [ngStyle]="{'height': menuItem.opened ? 30 * menuItem.innerItems.length + 'px' : 0}" class="menu-children-container">
-        <li *ngFor="let listChildren of menuItem.innerItems" (click)="menuChildClicked(listChildren)">
-          <a href="#">{{listChildren.title}}</a></li>
-      </ul>
-    </li>
-  </ul>
-              <!--End of Navigation List-->
-</aside>
-                <!--End of nav SideBar-->
+    <!--Navigation List-->
+    <ul class="sidebar-nav-ul">
+      <li class="head-li">Main Navigation</li>
+      <li class="sidebar--category" *ngFor="let menuItem of menuItems">
+        <span class="showed" (click)="menuClicked(menuItem)"><span><i class="{{menuItem.icon}}"></i>{{menuItem.title}}</span></span>
+        <ul class="category-list" [ngStyle]="{'height': menuItem.opened ? 30 * menuItem.innerItems.length + 'px' : 0}" class="menu-children-container">
+          <li class="category-list_item" *ngFor="let listChildren of menuItem.innerItems" (click)="menuChildClicked(listChildren)">
+            <a class="list--item_link" routerLink="#">{{listChildren.title}}</a></li>
+        </ul>
+      </li>
+    </ul>
+    <!--End of Navigation List-->
+  </aside>
+  <!--End of nav SideBar-->
 
-                <!--Content-->
-<div class="content-block">
-  <router-outlet></router-outlet>
+  <!--Content-->
+  <div class="content-block">
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
